espresso (0.99.20) UNRELEASED; urgency=low

  * Add support for cancellable progress bars.
  * The Copy/Config split is more inconvenient than useful, so merge the two
    steps into one, called simply Install.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 28 Feb 2006 16:12:42 +0000

espresso (0.99.19) dapper; urgency=low

  [ Jonathan Riddell ]
  * Add accessor methods to the GTK frontend for use by user-setup.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 28 Feb 2006 14:34:44 +0000

espresso (0.99.18) dapper; urgency=low

  * Rip all the /target unmounting code out of espresso.backend.copy and do
    it in the main espresso program just before exiting.
  * Parse /proc/mounts for mountpoints to unmount; this saves having to have
    a get_mountpoints method in every frontend.
  * Unmount /target before starting the frontend, since we will behave badly
    if /target is still mounted from a previous installation attempt.

  * Handle all PROGRESS commands entirely in debconffilter, without passing
    them through to the debconf frontend.
  * Add a PROGRESS REGION extension to debconffilter, and a ProgressPosition
    class to keep track of progress bar regions; allows a single progress
    bar to be subdivided into pieces for different stages.
  * Hack FilteredCommand.run_command() to execute the command without any
    debconffiltering glue if frontend is None; this allows nested
    FilteredCommands to more or less work.
  * Stop FilteredCommand.error() from running a UI loop; we assume that the
    frontend's error_dialog() method runs synchronously.

  * Move espresso/components/summary to a new scripts directory.
  * Rework copy and configuration progress bars using debconffilter. This
    fixes some responsiveness bugs, allows for localisation, and finally
    unifies all progress bar handling.
  * Add debconf template translation boilerplate.

  * Move call_gparted from espresso.backend.part into the GTK frontend, as